--- a/sololearn.html
+++ b/sololearn.html
@@ -43,7 +43,7 @@ https://www.sololearn.com/Discuss/2107512/?ref=app
    </section>
 
  
- <main id="main" id="main">
+ <main id="main">
      <input id="search-bar"  
      placeholder="Search by name"   
      oninput="sortByName(this.value)"/>
