--- a/sololearn.html
+++ b/sololearn.html
@@ -22,7 +22,7 @@ https://www.sololearn.com/Discuss/2107512/?ref=app
     <meta name="description" content="100 PRO : A celebration code for all 100 people who won sololearn pro version">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sololearn.css">
-    <script src="sololearn.js">JS not supported by current browser<script>
+    <script src="sololearn.js">JS not supported by current browser</script>
 </head>
 
 <body>
